spring-data-jpa and service

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <org.springframework.version>4.2.2.RELEASE</org.springframework.version>
         <org.hibernate.version>5.2.2.Final</org.hibernate.version>
     </properties>
+    <configuration>
+        <downloadSources>true</downloadSources>
+        <downloadJavadocs>true</downloadJavadocs>
+    </configuration>
 
     <dependencies>
         <!--pure spring-->
@@ -54,12 +58,45 @@
             <version>${org.hibernate.version}</version>
         </dependency>
 
+        <!--spring data jpa-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.9.0.RELEASE</version>
+        </dependency>
+
+
         <!--log4j-->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>
+
+        <!--json-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.5</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--security-->
+        <!--bcrypt-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>3.1.0.RELEASE</version>
+        </dependency>
+
+        <!--validation-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${org.hibernate.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
