controllers, db queries, exceptions

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -4,4 +4,4 @@ password=password
 url=jdbc:mysql://localhost:3306/awp_schema
 dialect=org.hibernate.dialect.MySQLDialect
 driver=com.mysql.jdbc.Driver
-hbm2ddl.auto=create
+hbm2ddl.auto=update
