--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <org.springframework.version>4.2.2.RELEASE</org.springframework.version>
         <org.hibernate.version>5.2.2.Final</org.hibernate.version>
+        <org.slf4j-version>1.7.21</org.slf4j-version>
+        <jackson.version>2.8.5</jackson.version>
     </properties>
-    <configuration>
-        <downloadSources>true</downloadSources>
-        <downloadJavadocs>true</downloadJavadocs>
-    </configuration>
 
     <dependencies>
         <!--pure spring-->
@@ -45,7 +43,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
+            <version>6.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -73,12 +71,34 @@
             <version>1.2.14</version>
         </dependency>
 
+        <!-- slf4j-bridge for commons-logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${org.slf4j-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${org.slf4j-version}</version>
+        </dependency>
+
         <!--json-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.6.5</version>
-            <scope>compile</scope>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!--security-->
