--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <org.hibernate.version>5.2.2.Final</org.hibernate.version>
         <org.slf4j-version>1.7.21</org.slf4j-version>
         <jackson.version>2.8.5</jackson.version>
+        <securtiy.version>4.2.0.RELEASE</securtiy.version>
     </properties>
 
     <dependencies>
@@ -107,6 +108,18 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
             <version>3.1.0.RELEASE</version>
+        </dependency>
+
+        <!--spring security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${securtiy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${securtiy.version}</version>
         </dependency>
 
         <!--validation-->
