--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
-    
+
     <servlet-mapping>
         <servlet-name>DefaultServlet</servlet-name>
         <!--It's needed if I use angular as a front end-->
@@ -18,6 +18,8 @@
         <servlet-name>DefaultServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 
+        <load-on-startup>1</load-on-startup>
+
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>WEB-INF/spring/webcontext/DispatcherServletContext.xml</param-value>
@@ -27,10 +29,19 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>WEB-INF/spring/appcontext/ApplicationContext.xml</param-value>
     </context-param>
-    
+
+    <!--spring security-->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
