controllers, repositories, exceptions

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -3,5 +3,5 @@ user=awp
 password=password
 url=jdbc:mysql://localhost:3306/awp_schema
 dialect=org.hibernate.dialect.MySQLDialect
-driver=com.mysql.jdbc.Driver
+driver=com.mysql.cj.jdbc.Driver
 hbm2ddl.auto=update
